--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,34 +11,124 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/purple_700"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.65" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:background="@color/purple_200" />
 
     <androidx.constraintlayout.widget.Group
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@drawable/background_bottom_sheet_16"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@id/horizontal_guideline" />
+        app:layout_constraintTop_toTopOf="@id/viewTransparentBorder" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="56dp"
+        android:background="@drawable/background_blue_24"
+        app:layout_constraintBottom_toBottomOf="@id/tvPrice"
+        app:layout_constraintTop_toTopOf="@id/tvPrice" />
 
     <TextView
         android:id="@+id/tvPrice"
         style="@style/BoldWhiteText"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="36dp"
-        android:background="@drawable/background_blue_24"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
-        app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@id/viewBorder"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:text="35000" />
+
+    <TextView
+        style="@style/SmallWhiteText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/rial"
+        app:layout_constraintBottom_toBottomOf="@id/tvPrice"
+        app:layout_constraintEnd_toStartOf="@id/tvPrice"
+        app:layout_constraintTop_toTopOf="@id/tvPrice" />
+
+    <View
+        android:id="@+id/viewTransparentBorder"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        app:layout_constraintBottom_toBottomOf="@id/tvPrice"
+        app:layout_constraintTop_toTopOf="@id/tvPrice" />
+
+    <View
+        android:id="@+id/viewBorder"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="12dp"
+        android:background="@color/border"
+        app:layout_constraintBottom_toTopOf="@id/imageViewOriginPin" />
+
+    <ImageView
+        android:id="@+id/imageViewOriginPin"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_origin_pin"
+        app:layout_constraintBottom_toTopOf="@id/imageViewDestPin"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/tvOriginPin"
+        style="@style/NormalBlackText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        app:layout_constraintBottom_toBottomOf="@id/imageViewOriginPin"
+        app:layout_constraintEnd_toStartOf="@id/imageViewOriginPin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imageViewOriginPin"
+        tools:text="مبدا  هفت حوض، میدان نبوت" />
+
+    <ImageView
+        android:id="@+id/imageViewDestPin"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="28dp"
+        android:src="@drawable/ic_origin_pin"
+        app:layout_constraintBottom_toTopOf="@id/btnAccept"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0"
+        app:tint="@color/dest_blue"
+        tools:ignore="ContentDescription" />
+
+    <TextView
+        android:id="@+id/tvDestPin"
+        style="@style/NormalBlackText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        app:layout_constraintBottom_toBottomOf="@id/imageViewDestPin"
+        app:layout_constraintEnd_toStartOf="@id/imageViewDestPin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imageViewDestPin"
+        tools:text="مقصد  ونک، میدان ونک" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnAccept"
+        style="@style/NormalWhiteText"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/background_blue_16"
+        android:text="@string/accept_offer"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
