--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,14 +15,15 @@
     </style>
 
     <style name="NormalWhiteText">
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="fontFamily">@font/iran_sans_fanum</item>
     </style>
 
     <style name="NormalBlackText">
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">26sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/iran_sans_fanum</item>
     </style>
 </resources>
