--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,11 @@
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/iran_sans_fanum</item>
     </style>
+
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:colorAccent">@color/dark_blue</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="android:fontFamily">@font/iran_sans_fanum</item>
+        <item name="android:textSize">17sp</item>
+    </style>
 </resources>
