--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,9 +126,10 @@
         app:layout_constraintTop_toTopOf="@id/imageViewDestPin"
         tools:text="مقصد  ونک، میدان ونک" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <ir.snapp.snappboxtest.component.TouchableButton
         android:id="@+id/btnAccept"
         style="@style/NormalWhiteText"
+        android:theme="@style/Widget.AppCompat.Button"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginHorizontal="20dp"
